Content security policy implementation by nette and using n:nonce atribute for inline js code

--- a/app/MemberModule/components/RatingControl.latte
+++ b/app/MemberModule/components/RatingControl.latte
@@ -1,6 +1,6 @@
 {import '../templates/@svg.latte'}
 
-<script type="application/javascript">
+<script type="application/javascript" n:nonce>
 	$(function () {
 		$(document).on('click', '#editRating', function(){
 			id = this.dataset.member;
