--- a/app/MemberModule/templates/Akce.edit.latte
+++ b/app/MemberModule/templates/Akce.edit.latte
@@ -21,7 +21,7 @@
 <script type="text/javascript" src="{$basePath}/js/jquery.textarea_autosize.min.js"></script>
 <script type="text/javascript" src="{$basePath}/js/akce.js"></script>
 
-<script type="text/javascript">
+<script type="text/javascript" n:nonce>
 	$.texyla.setDefaults({
 		baseDir: {$basePath}+'/texyla',
 		previewPath: {link texyPreview, TRUE}
