--- a/app/MemberModule/templates/Ankety.edit.latte
+++ b/app/MemberModule/templates/Ankety.edit.latte
@@ -17,7 +17,7 @@ div.texyla div.textarea-container { clear: right;}
 
 {control texylaJs}
 
-<script type="text/javascript">	
+<script type="text/javascript" n:nonce>
 	function removeRow(elem){
   		p = elem.parentNode.parentNode;
   		p.parentNode.removeChild(p);
