--- a/app/MemberModule/templates/Dokumenty.default.latte
+++ b/app/MemberModule/templates/Dokumenty.default.latte
@@ -10,7 +10,7 @@
 		li.file .file-icon { vertical-align: bottom; }
 		li.dir .icon { font-size: 16px}
 	</style>
-	<script type="text/javascript">
+	<script type="text/javascript" n:nonce>
 		$(function() {
 			open = document.querySelector('.icon-folder-open').outerHTML;
 			close = document.querySelector('.icon-folder').outerHTML;
