--- a/app/MemberModule/templates/Mail.add.latte
+++ b/app/MemberModule/templates/Mail.add.latte
@@ -25,7 +25,7 @@ input.buttonLike:active { background-color: #da251c; color: white; background-im
 {control texylaJs}
 
 <script type="text/javascript" src="{$basePath}/js/jquery.textarea_autosize.min.js"></script>
-<script type="text/javascript">
+<script type="text/javascript" n:nonce>
 	$.Shortcuts.add({
 	    	mask: 'Ctrl+A',
 	    	handler: function() {
