--- a/app/MemberModule/templates/User.edit.latte
+++ b/app/MemberModule/templates/User.edit.latte
@@ -20,7 +20,7 @@
 <script type="text/javascript" src="{$basePath}/js/jquery-ui.custom.min.js"></script>
 <script type="text/javascript" src="{$basePath}/js/jquery.ui.datepicker-cs.js"></script>
 
-<script type="text/javascript">
+<script type="text/javascript" n:nonce>
 	$(function() {		
 		var elem = document.createElement('input');
       	elem.setAttribute('type', 'date');
