--- a/app/MemberModule/templates/Hlasovani.edit.latte
+++ b/app/MemberModule/templates/Hlasovani.edit.latte
@@ -24,7 +24,7 @@ h2 { margin-top: 1ex;}
 
 {control texylaJs}
 
-<script type="text/javascript">	
+<script type="text/javascript" n:nonce>
 	function removeRow(elem){
   		p = elem.parentNode.parentNode;
   		p.parentNode.removeChild(p);
