--- a/app/PhotoModule/templates/Album.default.latte
+++ b/app/PhotoModule/templates/Album.default.latte
@@ -1,7 +1,7 @@
 {block #head}
 <link rel="stylesheet" href="{$baseUri}/css/photolist.css" type="text/css">
 <script src="{$baseUri}/js/nette.ajax.js"></script>
-<script type="text/javascript" n:syntax="off">
+<script type="text/javascript" n:syntax="off" n:nonce>
 	$(function () {
 		$.nette.init();
 
