--- a/app/PhotoModule/templates/Album.view.latte
+++ b/app/PhotoModule/templates/Album.view.latte
@@ -10,7 +10,7 @@
 
 <script src="{$baseUri}/js/confirm.js" type="text/javascript"></script>
 	<script src="{$baseUri}/js/jquery.fancybox.min.js" type="text/javascript"></script>
-	<script type="text/javascript" n:syntax="off">
+	<script type="text/javascript" n:syntax="off" n:nonce>
 		$(document).ready(function() {
 			$().fancybox({
 				selector: '[data-fancybox="images"]',
