Better message anchor

--- a/app/MemberModule/templates/Mail.default.latte
+++ b/app/MemberModule/templates/Mail.default.latte
@@ -41,7 +41,7 @@
 				</th>
 				<th class="right">
 					{if ($message->date_send)}
-						<a n:href="default#message/$message->id">{$message->date_send|date:'%A %d.%m.%Y %H:%I'}</a>
+						<a href="#message/{$message->id}">{$message->date_send|date:'%A %d.%m.%Y %H:%I'}</a>
 					{else}
 						za {$nextSendTime} minut
 					{/if}
