Message method getNextSendTime return DateTime object insted of int + use timeInWordsAgo filter to trasform to readable string

--- a/app/MemberModule/templates/Mail.default.latte
+++ b/app/MemberModule/templates/Mail.default.latte
@@ -43,7 +43,7 @@
 					{if ($message->date_send)}
 						<a href="#message/{$message->id}">{$message->date_send|date:'%A %d.%m.%Y %H:%I'}</a>
 					{else}
-						za {$nextSendTime} minut
+						bude odesláno {$nextSendTime|timeAgoInWords}
 					{/if}
 				</th>
 			</tr>
