--- a/app/MemberModule/templates/User.view.latte
+++ b/app/MemberModule/templates/User.view.latte
@@ -8,9 +8,9 @@
 		#card { position: relative; color: white; margin-top: 1em; max-width: 53em;}
 		#card, .square table { font-family: Arial, 'sans-serif';}
 		.line { display: none; }
-		.square { padding: 1em 1em 2em 1.1em; background-color: white;}
+		.square { background-color: white;}
 		.square table { text-align: left; color: black; border-collapse: collapse; font-size: 1.2em; height: 150px;}
-		.square table th, .square table td { padding: 0 1em; font-weight: bold}
+		.square table th, .square table td { padding: 0 1ex; font-weight: bold;}
 		.square table th { text-align: right; border-right: 2px solid silver; font-weight: normal}
 		#first { display: block; text-align: right; padding-bottom: 0.6ex; padding-right: 1.5em; border-radius: 1.5em 1.5em 0 0;}
 		#photo { background-color: silver; color: gray; padding: 65px 0;}
@@ -21,6 +21,8 @@
 			.line .buttonLike { font-size: 0.70em; }
 			#card #logo { display: block; position: absolute; bottom: 1em; right: 1em; background-color: white; padding: 1em; border-radius: 100%;}
 
+			.square { padding: 1em 1em 2em 1.1em; }
+			.square table th, .square table td { padding: 0 1em; }
 			.blue { background-color: #12397e;}
 			.red { background-color: #da251c; color: white;}
 			.yellow { background-color: #fac232; height: 0;}
