Unify the process of user activation for register, deleted and new users

--- a/app/MemberModule/templates/User.view.latte
+++ b/app/MemberModule/templates/User.view.latte
@@ -47,21 +47,18 @@
 					{include svg icon => check} aktivovat
 				</a>
 			</li>
-			<li n:if="($user->isInRole('board'))and(!is_null($member->role))and(!$member->hash)">
-				<a class="buttonLike" n:href="sendLoggingMail $member->id">
-					{include svg icon => envelope} poslat heslo
-				</a>
-			</li>
-			<li n:if="($user->isInRole('board'))and(!is_null($member->role))and($member->hash)">
+			{if ($user->isInRole('board'))and(!is_null($member->role))}
+			<li>
 				<a class="buttonLike" n:href="resetPassword $member->id">
 					{include svg icon => repeat} resetovat heslo
 				</a>
 			</li>
-			<li n:if="($user->isInRole('board'))and(!is_null($member->role))">
+			<li>
 				<a class="buttonLike confirm" n:href="delete $member->id" data-query="Opravdu chcete tohoto člena smazat? Tento krok může vrátit jen admin.">
 					{include svg icon => trash} smazat
 				</a>
 			</li>
+			{/if}
 			<li n:if="(($user->isInRole('admin')or($member->id == $user->getId()))and(!is_null($member->role)))">
 				<a class="buttonLike" n:href="edit,$member->id">
 					{include svg icon => pencil} editovat
