--- a/app/MemberModule/templates/Sign.in.latte
+++ b/app/MemberModule/templates/Sign.in.latte
@@ -33,7 +33,7 @@
 
 	<p class="required"><b>{control forgotPassForm}</p>
 	<hr>
-	<p><a n:href="register">Registrace nového člena</a></p>
+	<p><a n:href="Register:default">Registrace nového člena</a></p>
 
 
 {/block}
