--- a/app/MemberModule/templates/Sign.default.latte
+++ b/app/MemberModule/templates/Sign.default.latte
@@ -1,3 +1,6 @@
+{layout ''}
+{import '@svg.latte'}
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -8,8 +11,6 @@
 	<link rel="icon" sizes="any" href="{$baseUri}/img/favicon.svg" type="image/svg+xml">
 	<title>Přihlášení | VZS Jablonec</title>
 	<link rel="stylesheet" href="{$basePath}/css/main.css" type="text/css">
-	<script src="{$basePath}/js/jquery.min.js" type="text/javascript"></script>
-	<script src="{$basePath}/js/jquery.nette.js" type="text/javascript"></script>
 	<script src="{$basePath}/js/netteForms.js" type="text/javascript"></script>
 	<style type="text/css" media="screen" n:syntax="off">
 		table { margin: 0 auto; text-align: left; }
@@ -24,8 +25,15 @@
 			<img class="float-left" src="{$basePath}/img/vzs.svg" alt="Vodní záchranná služba ČČK" width="95" height="95">
 			<img class="float-right" src="{$basePath}/img/zralok.svg" alt="VZS Jablonec nad Nisou" width="95" height="95">
 		</div>
-		{include #content}
+
+		<div n:foreach="$flashes as $flash" class="flash {$flash->type}">{$flash->message}</div>
+
+		<p>{if $user->isLoggedIn()}
+				Aktuálně jste přihlášen. <a n:href="Sign:out">Odhlásit</a>
+			{else}
+				Aktuálně nejste přihlášen. <a n:href="Sign:in">Přihlásit</a>
+			{/if}
+		</p>
 	</div>
 	</body>
 </html>
-
