--- a/app/MemberModule/templates/Sign.default.latte
+++ b/app/MemberModule/templates/Sign.default.latte
@@ -1,39 +1,17 @@
-{layout ''}
-{import '@svg.latte'}
+{block #head}
+<style type="text/css" n:syntax="off">
+	#menu { display: none; }
+	#text { margin-left: 0; }
+</style>
+{/block}
 
-<!DOCTYPE html>
-<html>
-<head>
-	<meta http-equiv="content-type" content="text/html; charset=utf-8">
-	<meta http-equiv="content-language" content="cs">
-	<meta name="viewport" content="initial-scale=1, width=device-width"/>
-	<link rel="shortcut icon" href="{$basePath}/img/favicon.ico" type="image/x-icon">
-	<link rel="icon" sizes="any" href="{$baseUri}/img/favicon.svg" type="image/svg+xml">
-	<title>Přihlášení | VZS Jablonec</title>
-	<link rel="stylesheet" href="{$basePath}/css/main.css" type="text/css">
-	<script src="{$basePath}/js/netteForms.js" type="text/javascript"></script>
-	<style type="text/css" media="screen" n:syntax="off">
-		table { margin: 0 auto; text-align: left; }
-		#hlavni { max-width: 30em; margin: 0 auto; text-align: center; }
-		#nahore { height: 95px; margin: 1em auto 1em auto; padding: 0 4em; overflow: hidden; }
-	</style>
-	{block #head}{/block}
-</head>
-<body>
-	<div id="hlavni">
-		<div id="nahore">
-			<img class="float-left" src="{$basePath}/img/vzs.svg" alt="Vodní záchranná služba ČČK" width="95" height="95">
-			<img class="float-right" src="{$basePath}/img/zralok.svg" alt="VZS Jablonec nad Nisou" width="95" height="95">
-		</div>
+<h1 n:block="title">Přihlášení</h1>
 
-		<div n:foreach="$flashes as $flash" class="flash {$flash->type}">{$flash->message}</div>
-
-		<p>{if $user->isLoggedIn()}
-				Aktuálně jste přihlášen. <a n:href="Sign:out">Odhlásit</a>
+{block #content}
+		<p class="center">{if $user->isLoggedIn()}
+				Aktuálně jste přihlášen.
 			{else}
-				Aktuálně nejste přihlášen. <a n:href="Sign:in">Přihlásit</a>
+				Aktuálně nejste přihlášen.
 			{/if}
 		</p>
-	</div>
-	</body>
-</html>
+{/block}
