Css files rename for better recognition

--- a/app/PhotoModule/templates/@layout.latte
+++ b/app/PhotoModule/templates/@layout.latte
@@ -14,10 +14,10 @@
 	<meta name="format-detection" content="telephone=no">
 	<link rel="shortcut icon" href="{$baseUri}/img/favicon.ico" type="image/x-icon">
 	<link rel="icon" sizes="any" href="{$baseUri}/img/favicon.svg" type="image/svg+xml">
-	<link rel="stylesheet" href="{$baseUri}/css/main.css" type="text/css">
+	<link rel="stylesheet" href="{$baseUri}/css/photo.css" type="text/css">
 
-	<link rel="stylesheet" href="{$baseUri}/css/mobile.css" type="text/css" media="screen and (max-width: 750px)">
-	<link rel="stylesheet" href="{$baseUri}/css/mobile.css" type="text/css" media="screen and (orientation: portrait)">
+	<link rel="stylesheet" href="{$baseUri}/css/photo.mobile.css" type="text/css" media="screen and (max-width: 750px)">
+	<link rel="stylesheet" href="{$baseUri}/css/photo.mobile.css" type="text/css" media="screen and (orientation: portrait)">
 
 	<!--[if IE]><link rel="stylesheet" href="{$baseUri}/css/ie.css" type="text/css"><![endif]-->
 
