--- a/app/MemberModule/templates/@layout.latte
+++ b/app/MemberModule/templates/@layout.latte
@@ -16,10 +16,10 @@
 	<meta name="viewport" content="initial-scale=1, width=device-width"/>
 	<link rel="shortcut icon" href="{$baseUri}/img/favicon.ico" type="image/x-icon">
 	<link rel="icon" sizes="any" href="{$baseUri}/img/favicon.svg" type="image/svg+xml">
-	<link rel="stylesheet" href="{$baseUri}/css/main.css" type="text/css">
-	<link rel="stylesheet" href	="{$baseUri}/css/mobile.css" type="text/css" media="screen and (max-width: 900px)">
-	<link rel="stylesheet" href="{$baseUri}/css/mobile.css" type="text/css" media="screen and (orientation: portrait)">
-	<link rel="stylesheet" href="{$baseUri}/css/symbols.css">
+	<link rel="stylesheet" href="{$baseUri}/css/member.css" type="text/css">
+	<link rel="stylesheet" href	="{$baseUri}/css/member.mobile.css" type="text/css" media="screen and (max-width: 900px)">
+	<link rel="stylesheet" href="{$baseUri}/css/member.mobile.css" type="text/css" media="screen and (orientation: portrait)">
+	<link rel="stylesheet" href="{$baseUri}/css/member-symbols.css">
 
 	<script src="{$baseUri}/js/jquery.min.js" type="text/javascript"></script>
 	<script src="{$baseUri}/js/jquery.nette.js" type="text/javascript"></script>
