--- a/app/SignModule/templates/@layout.latte
+++ b/app/SignModule/templates/@layout.latte
@@ -11,7 +11,8 @@
 	<link rel="shortcut icon" href="{$baseUri}/img/favicon.ico" type="image/x-icon">
 	<link rel="icon" sizes="any" href="{$baseUri}/img/favicon.svg" type="image/svg+xml">
 	<title>Přihlášení | VZS Jablonec</title>
-	<link rel="stylesheet" href="{$baseUri}/css/main.css" type="text/css">
+	<link rel="stylesheet" href="{$baseUri}/css/sign.css" type="text/css">
+	<link rel="stylesheet" href="{$baseUri}/css/sign-symbols.css" type="text/css">
 	<script src="{$baseUri}/js/netteForms.js" type="text/javascript"></script>
 	{block #head}{/block}
 </head>
