--- a/app/PhotoModule/templates/Album.edit.latte
+++ b/app/PhotoModule/templates/Album.edit.latte
@@ -108,8 +108,8 @@
 
 <p>Pokud chcete rychle označit všechny fotografie, použijte klávesovou zkratku <b>Crtl+A</b></p>
 
-<p>Jestliže mají některé Vaše fotografie <b>modré zabarvení</b>, nebo v menu alba vidíte položku <b>změnit viditelnost</b> 
-znamená to, že Vaše album bylo označeno jako <b>viditelné pro veřejnost</b>. Modré zabarvení je znamení, že tato fotografie 
+<p>Jestliže mají některé Vaše fotografie ikonku <img src="{$basePath}/img/eye-close.svg" style="height: 1em"> nebo v menu alba vidíte položku <b>změnit viditelnost</b>
+	znamená to, že Vaše album bylo označeno jako <b>viditelné pro veřejnost</b>. <b>Ikonka <img src="{$basePath}/img/eye-close.svg" style="height: 1em"></b> je znamení, že tato fotografie
 je <b>neviditelná pro veřejnost</b>.</p>
 
 {/block}
